--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "deploy": "npm run build && npx gh-pages -d dist"
   },
   "dependencies": {
-    "gifuct-js": "^0.7.2",
+    "gifuct-js": "^2.1.2"
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
