--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gif-to-ascii-spirit",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://lolimhdcd.github.io/gif--ascii/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -19,5 +20,5 @@
     "gh-pages": "^5.0.0",
     "typescript": "^5.1.6",
     "vite": "^5.2.0"
-  }
+  },
 }
