--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview --port 4173",
     "deploy": "npm run build && npx gh-pages -d dist"
   },
   "dependencies": {
