--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "gh-pages": "^5.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
     "typescript": "^5.1.6",
     "vite": "^7.2.7"
   }
